<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- text view -->
    <TextView
        android:layout_alignParentTop="true"
        android:id="@+id/introTextViewId"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginBottom="@dimen/margin_16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_18"
        android:textColor="@color/colorAccent"
        android:text="@string/intro"/>

    <!--country-->
    <android.support.design.widget.TextInputLayout
        android:layout_below="@id/introTextViewId"
        android:id="@+id/countryTextInputLayoutId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/ownerEditTextLayoutId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/country_hint"/>
    </android.support.design.widget.TextInputLayout>

    <!--pageSize-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/pageSizeTextInputLayoutId"
        android:layout_below="@id/countryTextInputLayoutId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/repoEditTextLayoutId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/page_size_hint"
            android:inputType="number"/>
    </android.support.design.widget.TextInputLayout>

    <!--hasLyrics-->
    <CheckBox
        android:id="@+id/hasLyricsCheckboxId"
        android:text="@string/has_lyrics_flag_text"
        android:layout_below="@id/pageSizeTextInputLayoutId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_centerHorizontal="true"
        android:layout_below="@id/hasLyricsCheckboxId"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:id="@+id/findButtonId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_button"/>
</RelativeLayout>